--- a/extensions/browser/BUILD.gn
+++ b/extensions/browser/BUILD.gn
@@ -1,3 +1,5 @@
+import("//brave/components/brave_wallet/browser/buildflags/buildflags.gni")
+
 source_set("browser") {
   visibility = [ "//extensions/browser:browser_sources" ]
 
@@ -5,6 +7,18 @@ source_set("browser") {
     "brave_extensions_browser_client.cc",
     "brave_extensions_browser_client.h",
   ]
+
+  if (brave_wallet_enabled) {
+    sources += [
+      "brave_extension_user_script_loader.cc",
+      "brave_extension_user_script_loader.h",
+      "web3_provider_extension_observer.h",
+      "web3_provider_extension_registry.cc",
+      "web3_provider_extension_registry.h",
+      "web3_provider_extension_registry_factory.cc",
+      "web3_provider_extension_registry_factory.h",
+    ]
+  }
 
   deps = [
     "//base",
